weblate/postgresql/primary/networkpolicy.yaml
---
# Source: weblate/charts/postgresql/templates/primary/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: weblate-postgresql
  namespace: "weblate"
  labels:
    app.kubernetes.io/instance: weblate
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/version: 17.5.0
    app.kubernetes.io/component: primary
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: weblate
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/component: primary
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 5432
